# dataops-agent

./: .env.corporate.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CORPORATE_SETUP.md  DEPLOYMENT_GUIDE.md  EXTENSION_PROPOSAL.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  SETUP_UV.md  STATUS.md  langgraph.json  main.py  project-structure.json  pyproject.toml  requirements.txt  test_bedrock.py  test_meta_query.py  uv.toml
.claude/skills/: langgraph-builder.md
cli/: __init__.py  templates.py  workflow_cli.py
core/: base_workflow.py  orchestrator.py  workflow_registry.py
docs/: CLI_QUICKSTART.md  IMPROVEMENTS.md  LANGGRAPH_PATTERNS.md  LLM_CONFIGURATION_ANALYSIS.md  LLM_CONFIGURATION_QUICK_REFERENCE.md  LLM_INTEGRATION_INDEX.md  LLM_PROVIDER_CONFIGURATION.md  MLFLOW_INTEGRATION.md  UV_MIGRATION.md  WORKFLOW_AUTOMATION.md  architecture.md  cli-tool-spec.md  extended-architecture.md  implementation-guide.md  quick-reference.md  research_notes.md  tools-usage-guide.md
examples/: mlflow_tracking_example.py
infrastructure/: __init__.py
infrastructure/config/: __init__.py  aws_config.py
infrastructure/llm/: __init__.py  bedrock_client.py  llm_config.py  llm_factory.py
infrastructure/observability/: __init__.py  mlflow_config.py
infrastructure/storage/: __init__.py  dynamodb_operations.py  s3_operations.py
infrastructure/tools/: __init__.py  dynamodb_tools.py  s3_tools.py
scripts/: corporate-setup.sh  push-to-github.sh  setup.sh
tests/: test_base_workflow.py  test_orchestrator.py  test_workflow_registry.py  test_workflows.py
workflows/: workflow_a.py  workflow_b.py  workflow_c.py
workflows/jil_parser/: README.md  __init__.py  config.yaml  workflow.py
workflows/jil_parser/tests/: __init__.py
